Missed `BUILD_ID` change to `GITHUB_RUN_ID`
Signed-off-by: David L. Armstrong <1403560+daversomethingsomething@users.noreply.github.com>

--- a/.github/workflows/ConanZFSDemo.yml
+++ b/.github/workflows/ConanZFSDemo.yml
@@ -32,8 +32,8 @@ jobs:
         # ZFS layout / structure
         PROJECT_DATASET="${ZPOOL_NAME}/${PROJECT}"
         BRANCH_DATASET="${PROJECT_DATASET}/${GITHUB_REF_NAME}"
-        BUILD_CLONE="${BRANCH_DATASET}_${JOB_HOST}-${BUILD_ID}"
-        BUILD_SNAPSHOT="${BRANCH_DATASET}@${JOB_HOST}-pre${BUILD_ID}"
+        BUILD_CLONE="${BRANCH_DATASET}_${JOB_HOST}-${GITHUB_RUN_ID}"
+        BUILD_SNAPSHOT="${BRANCH_DATASET}@${JOB_HOST}-pre${GITHUB_RUN_ID}"
 
         echo "ZFS_BUILD_CLONE=${ZFS_BUILD_CLONE}" >> $GITHUB_ENV
         echo "ZFS_BRANCH_DATASET=${ZFS_BRANCH_DATASET}" >> $GITHUB_ENV
