When passing empty string as input value GitHub switched to default.  So dumb.
Signed-off-by: David L. Armstrong <1403560+daversomethingsomething@users.noreply.github.com>

--- a/.github/workflows/ConanZFSDemo.yml
+++ b/.github/workflows/ConanZFSDemo.yml
@@ -26,8 +26,11 @@ on:
         type: boolean
         default: true
       conan_local_repo:
-        type: string
+        type: choice
         default: "http://nexus.homelab/repository/conan-homelab/"
+        options:
+          - "http://nexus.homelab/repository/conan-homelab/"
+          - "undefined"
 
 jobs:
   create_ZFS_clone:
