--- a/.github/workflows/conan-build-container.yml
+++ b/.github/workflows/conan-build-container.yml
@@ -32,7 +32,7 @@ on:
         default: linux-aarch64
       runner_selection-x86_64:
         type: string
-        default: linux-x86_64
+        default: linux-x86-64
       toolchain_prefix:
         type: string
         default: '/opt/toolchain'
@@ -61,7 +61,7 @@ on:
         default: linux-aarch64
       runner_selection-x86_64:
         type: string
-        default: linux-x86_64
+        default: linux-x86-64
       toolchain_prefix:
         type: string
         default: '/opt/toolchain'
