--- a/.github/workflows/conan-demoToolchain.yml
+++ b/.github/workflows/conan-demoToolchain.yml
@@ -19,7 +19,7 @@ on:
         default: linux-aarch64
       runner_selection-x86_64:
         type: string
-        default: linux-x86_64
+        default: linux-x86-64
       conan_center_proxy:
         type: string
       conan_local_recipes:
