better workflow name for ConanZFSDemo-ARC.yml
Signed-off-by: David L. Armstrong <1403560+daversomethingsomething@users.noreply.github.com>

--- a/.github/workflows/ConanZFSDemo-ARC.yml
+++ b/.github/workflows/ConanZFSDemo-ARC.yml
@@ -11,7 +11,7 @@
 # - https://github.com/DaverSomethingSomethingOrg/conan-github-workflows
 #
 
-name: Conan ZFS Demo using ConanToolchain
+name: Conan ZFS ARC Demo using ConanToolchain
 
 on:
   workflow_dispatch:
