switch back to conan_home for ARC container hook extension providing /CONAN_HOME
Signed-off-by: David L. Armstrong <1403560+daversomethingsomething@users.noreply.github.com>

--- a/.github/workflows/ConanZFSDemo-ARC.yml
+++ b/.github/workflows/ConanZFSDemo-ARC.yml
@@ -37,7 +37,7 @@ jobs:
     uses: DaverSomethingSomethingOrg/conan-github-workflows/.github/workflows/conan-toolchain.yml@main
     secrets: inherit
     with:
-      conan_home_host_path: "/CONAN_HOME"
+      conan_home: "/CONAN_HOME"
       runner_selection: 'linux-x86-64'
       component_subdirectory: "${{ inputs.component_subdirectory }}"
       conan_local_recipes: "conan-center-index"
